# assignment2-bioinformatics25

./: 0_clinical_data_analysis.ipynb  1_clinical_data_preprocessing.ipynb  2_omics_data_preprocessing.ipynb  3_train_mofa.ipynb  4_mofa_analysis.ipynb  pyproject.toml  report.md
plots/: cox_results.csv
