[project]
name = "bioinformatics-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gprofiler-official>=1.0.0",
    "ipykernel>=7.1.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.7",
    "mofapy2>=0.7.2",
    "mofax>=0.3.7",
    "mygene>=3.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
